--- a/src/app/admin/departments/list/departments.component.html
+++ b/src/app/admin/departments/list/departments.component.html
@@ -1,43 +1,102 @@
-<div class="flex justify-end ml-3 mt-3 mb-3 mr-3">
-  <button mat-raised-button color="primary" (click)="add()">+ Add</button>
-  </div>
-<div style="margin: 15px;" class="example-container ">
-    <table mat-table [dataSource]="list" class="mat-elevation-z8">
-      <ng-container matColumnDef="departmentId">
-        <th mat-header-cell *matHeaderCellDef> Id </th>
-        <td mat-cell *matCellDef="let element">{{element.departmentId}} </td>
-      </ng-container>
+<div class="flex-auto">
+  <div class="flex flex-col">
+    <app-content-navbar [isBack]="false" [title]="'Department'"></app-content-navbar>
     
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.departmentName | titlecase}} </td>
-      </ng-container>
-   
-    
-      <ng-container matColumnDef="location">
-        <th mat-header-cell *matHeaderCellDef> Location </th>
-        <td mat-cell *matCellDef="let element"> {{element.location | titlecase}} </td>
-      </ng-container>
-      <ng-container matColumnDef="departmentHead">
-        <th mat-header-cell *matHeaderCellDef> Head of the department </th>
-        <td mat-cell *matCellDef="let element"> {{element.departmentHead | titlecase}} </td>
-      </ng-container>
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> Action </th>
-        <td mat-cell *matCellDef="let element" > 
-          <button mat-icon-button color="primary" aria-label="Example icon button with a vertical three dot icon" (click)="$event.stopPropagation();action(element,'edit')">
-            <mat-icon>edit</mat-icon>
+    <div class="min-h-screen bg-gray-100">
+      <div class="flex justify-end m-3 items-center">
+        <div class="w-full">
+          <mat-form-field class="example-full-width w-full search-box m-0 mr-4">
+            <span matPrefix> </span>
+            <input
+              type="text"
+              matInput
+              placeholder="Search here"
+              name="search"
+              [(ngModel)]="searchText"
+              (click)="search()"
+            />
+            <button matSuffix mat-button>
+              <mat-icon (click)="search()">search</mat-icon>
+            </button>
+          </mat-form-field>
+        </div>
+        <div class="ml-7">
+          <button mat-raised-button color="primary" (click)="add()">
+            Create designation
           </button>
-          <button mat-icon-button color="primary" aria-label="Example icon button with a home icon" (click)="$event.stopPropagation();action(element,'delete')">
-            <mat-icon>delete_forever</mat-icon>
-          </button>
-        </td>
-      </ng-container>
-      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="action(row,'view')"></tr>
-    </table>
-    </div>
-    <div class="flex justify-center ml-3 mt-3 mb-3 mr-3">
-      <button mat-raised-button color="primary" (click)="loadMore()" *ngIf="list.length && count > list.length">Load more</button>
+        </div>
       </div>
-  
+
+      <div style="margin: 15px" class="example-container">
+        <table mat-table [dataSource]="list" class="mat-elevation-z8">
+          <ng-container matColumnDef="departmentId">
+            <th mat-header-cell *matHeaderCellDef>Id</th>
+            <td mat-cell *matCellDef="let element">
+              {{ element.departmentId }}
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef>Name</th>
+            <td mat-cell *matCellDef="let element">
+              {{ element.departmentName | titlecase }}
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="location">
+            <th mat-header-cell *matHeaderCellDef>Location</th>
+            <td mat-cell *matCellDef="let element">
+              {{ element.location | titlecase }}
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="departmentHead">
+            <th mat-header-cell *matHeaderCellDef>Head of the department</th>
+            <td mat-cell *matCellDef="let element">
+              {{ element.departmentHead | titlecase }}
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef>Action</th>
+            <td mat-cell *matCellDef="let element">
+              <button
+                mat-icon-button
+                color="primary"
+                aria-label="Example icon button with a vertical three dot icon"
+                (click)="$event.stopPropagation(); action(element, 'edit')"
+              >
+                <mat-icon>edit</mat-icon>
+              </button>
+              <button
+                mat-icon-button
+                color="primary"
+                aria-label="Example icon button with a home icon"
+                (click)="$event.stopPropagation(); action(element, 'delete')"
+              >
+                <mat-icon>delete_forever</mat-icon>
+              </button>
+            </td>
+          </ng-container>
+          <tr
+            mat-header-row
+            *matHeaderRowDef="displayedColumns; sticky: true"
+          ></tr>
+          <tr
+            mat-row
+            *matRowDef="let row; columns: displayedColumns"
+            (click)="action(row, 'view')"
+          ></tr>
+        </table>
+      </div>
+      <div class="flex justify-center ml-3 mt-3 mb-3 mr-3">
+        <button
+          mat-raised-button
+          color="primary"
+          (click)="loadMore()"
+          *ngIf="list.length && count > list.length"
+        >
+          Load more
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
