--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -1,7 +1,8 @@
-// .space{
-//     width:100%; 
-//     margin-left: 25px;
-// }
+mat-toolbar{
+    position: sticky;
+    top:0;
+    z-index: 1000;
+}
 .flex{
     // display: flex;
     align-items: end;
