--- a/src/app/shared/components/content-navbar/content-navbar.component.html
+++ b/src/app/shared/components/content-navbar/content-navbar.component.html
@@ -1,3 +1,8 @@
-    <div class="back-btn">
-        <mat-icon (click)="back()"> arrow_back </mat-icon>
+<div class="flex flex-col bg-white-500">
+  <div class="flex flex-row items-center">
+    <div class="back-btn" *ngIf="isBack">
+      <mat-icon (click)="back()"> arrow_back </mat-icon>
     </div>
+    <h3 class="font-bold text-gray-500 p-2 mx-2 m-0">{{ title }}</h3>
+  </div>
+</div>
