--- a/src/app/shared/components/data-modal/data-modal.component.html
+++ b/src/app/shared/components/data-modal/data-modal.component.html
@@ -7,7 +7,8 @@
     <mat-list role="list">
         <mat-list-item role="listitem" *ngFor="let data of dataList" >
             <mat-radio-button color="primary" [value]="data" (change)="valueChange($event)">
-                {{data?.fullName}}
+                <!-- {{data?.fullName}} -->
+                {{data?.firstName | titlecase}}  {{data?.middleName | titlecase}} {{data?.lastName | titlecase}} 
             </mat-radio-button>
         </mat-list-item>
     </mat-list>
