--- a/src/app/shared/components/tabledata/tabledata.component.html
+++ b/src/app/shared/components/tabledata/tabledata.component.html
@@ -1,4 +1,4 @@
-<div style="margin: 15px;" class="example-container ">
+<div  class="example-container m-3">
   <table mat-table [dataSource]="list" class="mat-elevation-z8">
     <!-- Position Column -->
     <ng-container matColumnDef="profile_photo">
