--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,11 +1,7 @@
 <div class="flex-auto">
   <div class="flex flex-col">
-    <div class="flex flex-col bg-white-500">
-      <div class="fle flex-row">
-        <h3 class="font-bold text-gray-500 p-2">Dashboard</h3>
-      </div>
-      <!--p tag -->
-    </div>
+    <app-content-navbar [isBack]="false" [title]="'Dashboard'"></app-content-navbar>
+    
 
     <!-- card design -->
     <div class="min-h-screen ml-3 mr-3">
