--- a/src/app/branch/add/add.component.html
+++ b/src/app/branch/add/add.component.html
@@ -24,7 +24,7 @@
                     </mat-form-field>
 
                     <mat-form-field class="example-full-width">
-                      <mat-label>Branch hr</mat-label>
+                      <mat-label>Branch HR</mat-label>
                       <input matInput placeholder="Please enter name of the branch hr" name="branchHR"
                         formControlName="branchHR" >
                     </mat-form-field>
