--- a/src/app/admin/employee/add/add.component.html
+++ b/src/app/admin/employee/add/add.component.html
@@ -237,7 +237,7 @@
                 <mat-label>Age</mat-label>
                 <input
                   matInput
-                  placeholder="Enter IFSC code "
+                  placeholder="Enter your age "
                   name="age"
                   formControlName="age"
                 />
@@ -296,7 +296,7 @@
                       <mat-label>Marks</mat-label>
                       <input
                         matInput
-                        placeholder="Employee Branch Number"
+                        placeholder="Enter marks"
                         name="marks"
                         formControlName="marks"
                       />
@@ -402,7 +402,7 @@
                 <mat-label>Team Leader </mat-label>
                 <input
                   matInput
-                  placeholder="Please Enter Team Leader"
+                  placeholder="Please enter team leader name"
                   name="teamLeader"
                   formControlName="teamLeader"
                 />
@@ -440,7 +440,7 @@
                 <mat-label>Company name</mat-label>
                 <input
                   matInput
-                  placeholder="Previous Company Name"
+                  placeholder="Previous company n ame"
                   name="companyName"
                   formControlName="companyName"
                 />
