--- a/src/app/layout/sidebarmenulist/sidebarmenulist.component.scss
+++ b/src/app/layout/sidebarmenulist/sidebarmenulist.component.scss
@@ -1,125 +1,123 @@
+.side-nav-content {
+  color: rgb(9, 9, 17);
+  font-weight: 400;
+  width: 220px;
+  height: 100%;
+  display: block;
+  overflow-x: hidden;
 
-.side-nav-content{
-    color: rgb(9, 9, 17);
-    font-weight: 400;
-    width: 220px;
-    height: 100%;
-    display: block;
-    overflow-x: hidden ;
+  ::ng-deep {
+    .mat-list-base .mat-list-item .mat-list-item-content,
+    .mat-list-base .mat-list-option .mat-list-item-content {
+      padding: 0 0px !important;
+    }
+    .mat-content {
+      flex: 0.9 !important;
+    }
+    .mat-expansion-panel-body {
+      padding: 0 10px 0px !important;
+    }
+    .mat-expansion-panel-header.mat-expanded {
+      height: 48px;
+      border-radius: 0px;
+    }
+    .mat-nav-list .mat-list-item {
+      padding: 0px 0px 0px 18px;
+    }
+  }
+
+  .mat-list-item:hover,
+  .mat-expansion-panel:not(.mat-expanded):hover,
+  .mat-expansion-panel-header.mat-expanded:hover {
+    color: #fff !important;
+    transition: all 0.3s ease-in-out;
+    transform: scale(1.03);
+    cursor: pointer;
+    background: #3f51b5;
+    .mat-expansion-panel-header-title {
+      color: #fff !important;
+    }
+  }
 }
 
-.expand{
-    width: 220px;
+.expand {
+  width: 220px;
 }
-.collapse{
-    width: 45px;
+.collapse {
+  width: 45px;
 }
 
 .logo {
-    position:relative;
-    padding:0.5rem 0.7rem ;
-    .logo-mini{
-        margin-bottom: 5px;
-        border-bottom: 2px solid white;
-    
-    }
-    img{
-       height: 75px;
-       width: 200px;
-       border-radius: 10px;
-       padding: 8px;
-    }
- }
-
-.nav-list{
-    // height: 100%;
-    padding: 0;
-    margin-bottom: 0;
-    list-style: none;
+  position: relative;
+  padding: 0.5rem 0.7rem;
+  .logo-mini {
+    margin-bottom: 5px;
+    border-bottom: 2px solid white;
+  }
+  img {
+    height: 75px;
+    width: 200px;
+    border-radius: 10px;
+    padding: 8px;
+  }
 }
 
-.nav-list-item{
-display: flex;
-align-items: center;
-height: 40px;
-margin-top:8px;
+.nav-list {
+  // height: 100%;
+  padding: 0;
+  margin-bottom: 0;
+  list-style: none;
 }
 
+.nav-list-item {
+  display: flex;
+  align-items: center;
+  height: 40px;
+  margin-top: 8px;
+}
 
-
-.nav-list-item:hover{
+.nav-list-item:hover {
   background-color: rgba(186, 178, 178, 0.3);
   color: #3f51b5;
-  transition: all .3s ease-in-out;
+  transition: all 0.3s ease-in-out;
   transform: scale(1.1);
 }
 
-.nav-list-item i{
+.nav-list-item i {
+  font-size: 20px;
+  height: 25px;
+  width: 25px;
+  margin: 0 15px 0 10px;
+  text-align: center;
+  line-height: 25px;
+}
+
+.nav-list-item span {
+  width: 170px;
+  text-transform: capitalize;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.mat-expansion-panel:not([class*="mat-elevation-z"]) {
+  box-shadow: none !important;
+  background: transparent !important;
+}
+.mat-expansion-panel-header {
+  padding: 0 0px !important;
+}
+.mat-elevation-z0 {
+  .icon {
     font-size: 20px;
     height: 25px;
     width: 25px;
     margin: 0 15px 0 10px;
     text-align: center;
     line-height: 25px;
-}
-
-.nav-list-item span{
-    width: 170px;
-    text-transform: capitalize;
-    font-size: 14px;
-    font-weight: 400;
-}
-
-.mat-expansion-panel:not([class*='mat-elevation-z']) {
-    box-shadow: none !important;
-    background:transparent !important; 
   }
-  .mat-expansion-panel-header{
-    padding: 0 0px !important; 
-  }
-  .mat-elevation-z0{
-  .icon{
-    font-size: 20px;
-    height: 25px;
-    width: 25px;
-    margin: 0 15px 0 10px;
-    text-align: center;
-    line-height: 25px;
-}
   span {
     text-transform: capitalize;
     font-size: 14px;
     font-weight: 400;
-  }
-
- 
-}
-::ng-deep {
-.mat-list-base .mat-list-item .mat-list-item-content, .mat-list-base .mat-list-option .mat-list-item-content{
-    padding: 0 0px !important;
-  }
-  .mat-content {
-    flex: 0.9  !important;
-}
-.mat-expansion-panel-body {
-    padding: 0 10px 0px  !important;
-}
-.mat-expansion-panel-header.mat-expanded {
-  height: 48px;
-  border-radius: 0px;
-}
-.mat-nav-list .mat-list-item{
-  padding: 0px 0px 0px 18px;
-}
-}
-
-.mat-list-item:hover, .mat-expansion-panel:not(.mat-expanded):hover,.mat-expansion-panel-header.mat-expanded:hover {
-  color: #fff !important;
-  transition: all .3s ease-in-out;
-  transform: scale(1.03);
-  cursor: pointer;
-  background: #3f51b5;
-  .mat-expansion-panel-header-title{
-    color: #fff !important;
   }
 }
