--- a/src/app/core/components/add-leavetype/add-leavetype.component.html
+++ b/src/app/core/components/add-leavetype/add-leavetype.component.html
@@ -18,7 +18,7 @@
             <input
               matInput
               placeholder="Please enter no of days"
-              name="noOfDays"
+              name="total"
               formControlName="total"
             />
           </mat-form-field>
