--- a/src/app/department/add/add.component.html
+++ b/src/app/department/add/add.component.html
@@ -36,8 +36,8 @@
                     <mat-label>Location</mat-label>
                     <input
                       matInput
-                      placeholder="Please enter lcoation of the department"
-                      name="departmentHead"
+                      placeholder="Please enter location "
+                      name="location"
                       formControlName="location"
                     />
                   </mat-form-field>
