--- a/src/app/leaves/leavehistory/leave-history.component.html
+++ b/src/app/leaves/leavehistory/leave-history.component.html
@@ -1,11 +1,12 @@
-<div class="m-4"> 
+<no-data-found *ngIf="!leaveHistory.length"></no-data-found>
+<div class="m-4" *ngIf="leaveHistory.length"> 
      <mat-accordion class="mx-1  panel " *ngFor=" let list of leaveHistory ; let i=index ">
         <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false" class="border">
             <mat-expansion-panel-header class=" flex p-4">
                 <div class="lg:w-3/12 w-3/12 md:w-3/12 sm:w-3/12 ">
                     <span class="flex flex-col">
                         <small class="text-gray-500 text-xs">Leave type</small>
-                        <span class="font-medium">{{list['leaveType']}} </span>
+                        <span class="font-medium">{{list['leaveType'] | titlecase }} </span>
                     </span>
                 </div>
                 <div class="lg:w-3/12 w-2/12 md:w-2/12 sm:w-2/12">
@@ -17,7 +18,7 @@
                 <div class="lg:w-3/12 w-2/12 md:w-2/12 sm:w-2/12">
                     <span class="flex flex-col">
                         <small class="text-gray-500 text-xs"> No of days</small>
-                        <span class="font-medium">2</span>
+                        <span class="font-medium">{{list['leaveDays']}}</span>
                     </span>
                 </div>
                 <div class="lg:w-3/12 w-3/12 md:w-3/12 sm:w-3/12">
@@ -27,11 +28,11 @@
             <mat-divider></mat-divider>
             <div class="flex lg:text-sm  text-xs">
             <small class="lg:w-1/12 w-3/12 text-gray-500 text-xs">Duration :</small>
-            <span class="w-11/12 font-medium">({{list['start_date'] | date:'mediumDate'}},{{list['fromSession']}}) -( {{list['start_date'] | date:'mediumDate'}},{{list['toSession']}})  </span>   
+            <span class="w-11/12 font-medium">{{list['start_date'] | date:'mediumDate'}},{{list['fromSession'] | titlecase}}  To  {{list['end_date'] | date:'mediumDate'}},{{list['toSession'] | titlecase}}  </span>   
             </div>
             <div class="flex lg:text-sm ">
             <small class="lg:w-1/12 w-3/12 text-gray-500 text-xs">Reason :</small>
-            <span class="w-11/12 font-medium"> {{list['reason']}} </span>   
+            <span class="w-11/12 font-medium"> {{list['reason' | titlecase ]}} </span>   
             </div>
             <mat-action-row >
                     <div class="flex flex-col">
@@ -41,7 +42,5 @@
             </mat-action-row>
         </mat-expansion-panel>
     </mat-accordion> 
-
- 
-      
+   
 </div>
