--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -9,11 +9,11 @@
         <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="50%" fxFlex.md="50%" *ngFor="let card of cardData" (click)="onSelect(card)">
           <div class="flex flex-wrap justify-between card-custom border ">
             <div class="bg-blue-300 text-blue-700 rounded flex justify-center p-3 ">
-              <i class="material-icons">{{card.icon}}</i>
+              <i class="material-icons">{{card['icon']}}</i>
             </div>
             <div class="text-center">
-              <div class="text-lg font-extrabold">{{card.count}} </div>
-              <div class="text-base text-sm">{{card.lable}}</div>
+              <div class="text-lg font-extrabold">{{card['count']}} </div>
+              <div class="text-base text-sm">{{card['label']}}</div>
             </div>
           </div>
         </div>
