--- a/src/app/leaves/leave-manage/leave-manage.component.html
+++ b/src/app/leaves/leave-manage/leave-manage.component.html
@@ -1,12 +1,15 @@
-<div class="m-4 manage-leave">
+<no-data-found *ngIf="!leavesList.length"></no-data-found>
+
+
+<div class="m-4 manage-leave" *ngIf="leavesList.length">
   <mat-accordion class="my-4 mx-4" *ngFor="let list of leavesList">
     <mat-expansion-panel
       (opened)="panelOpenState = true"
       (closed)="panelOpenState = false"
       class="border"
     >
-      <mat-expansion-panel-header class=" flex custom-panel p-4 ">
-        <div class="lg:w-3/12 w-3/12 md:w-3/12 sm:w-3/12 ">
+      <mat-expansion-panel-header class="flex custom-panel p-4">
+        <div class="lg:w-3/12 w-3/12 md:w-3/12 sm:w-3/12">
           <span class="flex flex-col">
             <small class="text-gray-500 text-xs">Name</small>
             <span class="font-medium"
@@ -18,74 +21,82 @@
         <div class="lg:w-2/12 w-2/12 md:w-2/12 sm:w-2/12">
           <span class="flex flex-col">
             <small class="text-gray-500 text-xs">From date</small>
-            <span class="font-medium">{{ list.start_date | date: "shortDate" }} </span>
+            <span class="font-medium"
+              >{{ list.start_date | date: "shortDate" }}
+            </span>
           </span>
         </div>
         <div class="lg:w-2/12 w-2/12 md:w-2/12 sm:w-2/12">
           <span class="flex flex-col">
             <small class="text-gray-500 text-xs">To date</small>
-            <span class="font-medium">{{ list.end_date | date: "shortDate" }}</span>
+            <span class="font-medium">{{
+              list.end_date | date: "shortDate"
+            }}</span>
           </span>
         </div>
         <div class="lg:w-2/12 w-2/12 md:w-2/12 sm:w-2/12">
           <span class="flex flex-col">
             <small class="text-gray-500 text-xs"> No of days</small>
-            <span class="font-medium">2</span>
+            <span class="font-medium">{{ list?.leaveDays}}</span>
           </span>
         </div>
-        
+
         <div class="lg:w-3/12 w-3/12 md:w-3/12 sm:w-3/12">
           <div class="flex flex-col">
-            <small class="text-gray-500 text-xs "> Applied on </small>
-            <span class="font-medium"> {{
-              list?.requested_at | date: "short"
-            }}</span>
+            <small class="text-gray-500 text-xs"> Applied on </small>
+            <span class="font-medium">
+              {{ list?.requested_at | date: "short" }}</span
+            >
           </div>
         </div>
       </mat-expansion-panel-header>
 
       <!-- <div style="padding: 15px"> -->
-        <div class="flex justify-between items-center text">
-          <div class="w-9/12 lg:w-9/12 sm:w-9/12 md:w-9/12 ">
-            <small class="text-gray-500 text-xs mr-4 ">Reason :</small>
-            <span class="">{{ list.reason }}</span>
-          </div>
-          <div class="flex flex-row  w-3/12 lg:w-3/12 sm:w-3/12 md:w-3/12 "> 
-            <mat-form-field class="text-xs w-full" >
-              <mat-select
-                [(value)]="list.leaveStatus"
-                (click)="$event.stopPropagation(); onChangeStatus($event)"
-              >
-                <mat-option
-                  *ngFor="let status of leaveStatus"
-                  [value]="status.value"
-                >
-                  {{ status.viewValue }}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
-          </div>
+      <div class="flex justify-between items-center text">
+        <div class="w-9/12 lg:w-9/12 sm:w-9/12 md:w-9/12">
+          <small class="text-gray-500 text-xs mr-4">Reason :</small>
+          <span class="">{{ list.reason }}</span>
         </div>
-        <div class="flex justify-between items-center">
-          <div class="w-full">
-            <mat-form-field class="example-full-width w-full">
-              <mat-label> Remark </mat-label>
-              <input matInput placeholder="Give remark" value="" />
-            </mat-form-field>
-          </div>
-          <div class="ml-4">
-            <button
-              class="ml-4"
-              mat-raised-button
-              color="primary"
-              (click)="submit(list)"
+        <div class="flex flex-row w-3/12 lg:w-3/12 sm:w-3/12 md:w-3/12">
+          <mat-form-field class="text-xs w-full">
+            <mat-select
+              [(value)]="list.leaveStatus"
+              (click)="$event.stopPropagation(); onChangeStatus($event)"
             >
-              Submit
-            </button>
-          </div>
+              <mat-option
+                *ngFor="let status of leaveStatus"
+                [value]="status.value"
+              >
+                {{ status.viewValue }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
         </div>
+      </div>
+      <div class="flex justify-between items-center">
+        <div class="w-full">
+          <mat-form-field class="example-full-width w-full">
+            <mat-label> Remark </mat-label>
+            <input
+              matInput
+              placeholder="Give remark"
+              value=""
+              [(ngModel)]="list.remarks"
+            />
+          </mat-form-field>
+        </div>
+        <div class="ml-4">
+          <button
+            class="ml-4"
+            mat-raised-button
+            color="primary"
+            (click)="submit(list)"
+          >
+            Submit
+          </button>
+        </div>
+      </div>
       <!-- </div> -->
     </mat-expansion-panel>
   </mat-accordion>
 </div>
-
