setting ui and api

--- a/src/app/branch/list/list.component.html
+++ b/src/app/branch/list/list.component.html
@@ -29,7 +29,7 @@
           </button>
         </div>
       </div>
-      <no-data-found-app *ngIf="!branchList.length"></no-data-found-app>
+      <no-data-found *ngIf="!branchList.length"></no-data-found>
 
       <div
         style="margin: 15px"
