--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,12 +1,9 @@
 <mat-drawer-container autosize="true" >
-
             <mat-drawer mode="side"  opened>
-                <!-- <app-sidebar  class="sidebar" #sidebar [expand]=expand></app-sidebar> -->
-<app-sidebarmenulist [list]="lists" class="sidebar" #sidebar [expand]=expand></app-sidebarmenulist>
-                
+                <app-sidebarmenulist [list]="lists" class="sidebar" #sidebar [expand]=expand (toggle)="toggle()"></app-sidebarmenulist>
             </mat-drawer>
             <mat-drawer-content style="min-height: calc(100vh - 200px); overflow-y: auto; overflow-x: hidden;" >
                 <app-header  (toggle)="toggle()"></app-header>
                 <router-outlet></router-outlet>
             </mat-drawer-content>
-  </mat-drawer-container>
+</mat-drawer-container>
