--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <!-- card design -->
-    <div class="min-h-screen ml-3 mr-3">
+    <div class="ml-3 mr-3">
       <div fxLayout="row wrap" fxLayoutGap="10px grid" >
         <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="50%" fxFlex.md="50%" *ngFor="let card of cardData" (click)="onSelect(card)">
           <div class="flex flex-wrap justify-between card-custom border ">
