--- a/src/app/layout/sidebarmenulist/sidebarmenulist.component.scss
+++ b/src/app/layout/sidebarmenulist/sidebarmenulist.component.scss
@@ -82,13 +82,13 @@ margin-top:8px;
     font-size: 20px;
     height: 25px;
     width: 25px;
-    margin: 0 15px 0 10px;
+    margin: 0 10px 0 10px;
     text-align: center;
     line-height: 25px;
 }
   span {
     text-transform: capitalize;
-    font-size: 14px;
+    font-size: 13px;
     font-weight: 400;
   }
 
@@ -111,15 +111,38 @@ margin-top:8px;
 .mat-nav-list .mat-list-item{
   padding: 0px 0px 0px 18px;
 }
-}
 
-.mat-list-item:hover, .mat-expansion-panel:not(.mat-expanded):hover,.mat-expansion-panel-header.mat-expanded:hover {
-  color: #fff !important;
-  transition: all .3s ease-in-out;
-  transform: scale(1.03);
-  cursor: pointer;
+.mat-list-option:hover, .mat-list-option:focus, .mat-nav-list .mat-list-item:hover, .mat-nav-list .mat-list-item:focus, .mat-action-list .mat-list-item:hover, .mat-action-list .mat-list-item:focus{
   background: #3f51b5;
+  color: #fff !important;
+}
+.mat-expansion-panel-header.mat-expanded:focus, .mat-expansion-panel-header.mat-expanded:hover{
+  background: #3f51b5;
+  color: #fff !important;
+}
+.mat-expansion-panel .mat-expansion-panel-header.cdk-keyboard-focused:not([aria-disabled=true]), .mat-expansion-panel .mat-expansion-panel-header.cdk-program-focused:not([aria-disabled=true]), .mat-expansion-panel:not(.mat-expanded) .mat-expansion-panel-header:hover:not([aria-disabled=true]){
+  background: #3f51b5;
+  color: #fff !important;
   .mat-expansion-panel-header-title{
     color: #fff !important;
   }
+}
+}
+
+.active-parent{
+  color: #3f51b5 !important;
+  transition: all .3s ease-in-out;
+  transform: scale(1.03);
+  cursor: pointer;
+  // background: #3f51b5;
+  .mat-expansion-panel-header-title{
+    color: #3f51b5 !important;
+  }
+}
+.active-child{
+  color: #3f51b5 !important;
+  transition: all .3s ease-in-out;
+  transform: scale(1.03);
+  cursor: pointer;
+ 
 }
